--- a/index.ipynb
+++ b/index.ipynb
@@ -5,13 +5,7 @@
    "metadata": {},
    "source": [
     "# **<u>Contents</u>**\n",
-    "\n",
-    "1. [Analysis](#analysis)\n",
-    "    1. [Overview](#overview-an)\n",
-    "    2. [What Needs Researching](#what-needs-researching-an)\n",
-    "    3. [Current Solutions](#current-solutions-an)\n",
-    "    4. [Questions to Consider](#questions-to-consider-an)\n",
-    "    5. [Objectives](#objectives-an)\n",
+    "<div id=\"toc\"></div>\n",
     "\n",
     "# **<u>Analysis</u>** <a name=\"analysis\"></a>\n",
     "\n",
@@ -52,21 +46,86 @@
     "\n",
     "### **<u>Objectives</u>** <a name=\"objectives-an\"></a>\n",
     "\n",
-    "1. Design and implement a database with at least three tables:\n",
-    "    - A \"People\" table to store information about the individuals in the household, including their ages.\n",
-    "    - A \"Medicines\" table to store information about the different medicines, their required minimal interval between doses, maximum dose per day, and age appropriateness.\n",
-    "    - A \"Log\" table to keep track of which medicines have been administered, to whom, and when.\n",
-    "2. Develop a system that can use the information in these tables to determine when it is safe to administer the next dose of a particular medicine to a particular individual.\n",
-    "3. Ensure the system is user-friendly and accessible to the adults in the household or nursing home staff, so they can easily log medicine administration and check when the next dose can be safely given.\n",
-    "4. Implement a reminder system to alert the responsible adult when it's time to administer the next dose.\n",
-    "5. Ensure the system is secure and respects the privacy of the individuals, only authorised users should have access to the medical data.\n",
-    "6. The system should be robust and reliable, ensuring accurate tracking of medicine administration to prevent overdoses or missed doses."
+    "1. **Design and implement a database with at least three tables:**\n",
+    "    - **People:** This table will store information about the individuals in the household or nursing home. The data stored will include their names and ages.\n",
+    "    - **Medicines:** This table will store information about the different medicines. The data stored will include the name of the medicine, the required minimal interval between doses, the maximum dose per day, and the age appropriateness.\n",
+    "    - **Log:** This table will keep track of which medicines have been administered, to whom, and when. The data stored will include the name of the individual, the name of the medicine, and the time and date of administration.\n",
+    "2. **Develop a system that can use the information in these tables to determine when it is safe to administer the next dose of a particular medicine to a particular individual.**\n",
+    "    - The system will need to calculate the time since the last dose was administered and compare it to the minimal interval between doses.\n",
+    "    - The system will also need to keep track of the total amount of medicine administered in a day and compare it to the maximum dose per day.\n",
+    "3. **Ensure the system is user-friendly and accessible to the adults in the household or nursing home staff.**\n",
+    "    - The system should have a simple and intuitive interface for logging medicine administration and checking when the next dose can be safely given.\n",
+    "4. **Implement a reminder system to alert the responsible adult when it's time to administer the next dose.**\n",
+    "    - The system should send notifications or alarms to remind the responsible adult when it's time to administer the next dose.\n",
+    "5. **Ensure the system is secure and respects the privacy of the individuals.**\n",
+    "    - Only authorised users should have access to the medical data. The system should implement security measures to prevent unauthorised access.\n",
+    "6. **The system should be robust and reliable.**\n",
+    "    - The system should ensure accurate tracking of medicine administration to prevent overdoses or missed doses. It should be able to handle multiple users and large amounts of data without crashing or slowing down.\n",
+    "\n",
+    "### **<u>Limitations</u>** <a name=\"limitations-an\"></a>\n",
+    "\n",
+    "1. **Data Accuracy:** The system relies on accurate input of information about individuals, medicines, and administered doses. Any inaccuracies in this data could lead to incorrect reminders or unsafe administration of medicines.\n",
+    "2. **User Compliance:** The system's effectiveness is dependent on the users consistently logging administered doses. If a dose is administered but not logged in the system, it could lead to unsafe administration of subsequent doses.\n",
+    "3. **Technical Knowledge:** While the system is designed to be user-friendly, some level of technical knowledge is required to use it. This could be a barrier for some users, particularly in a household setting.\n",
+    "4. **Access to Technology:** The system requires access to a device with internet connectivity. This could be a limitation in settings where such access is limited or unreliable.\n",
+    "5. **Privacy and Security:** Storing sensitive medical information raises concerns about privacy and data security. While the system will implement security measures, there is always a risk of data breaches or unauthorized access.\n",
+    "6. **Medicine Complexity:** The system is designed to handle common scenarios of medicine administration, but there may be complexities or unique situations it cannot accommodate. For example, interactions between different medicines, or changes in a person's medicine regimen.\n",
+    "7. **Emergency Situations:** The system is not designed to handle emergency situations where normal medicine administration schedules may need to be overridden.\n",
+    "8. **Regulatory Compliance:** Depending on the jurisdiction, there may be legal and regulatory requirements related to the storage and handling of medical information that the system must comply with.\n",
+    "\n",
+    "### **<u>haha</u>** <a name=\"haha-an\"></a>\n",
+    "\n",
+    "\n",
+    "<script>\n",
+    "    document.addEventListener(\"DOMContentLoaded\", function() {\n",
+    "        var toc = document.getElementById(\"toc\");\n",
+    "        var headers = Array.from(document.querySelectorAll(\"h1, h2, h3, h4, h5, h6\"));\n",
+    "        var sectionCounter = 0;\n",
+    "        var subSectionCounter = 0;\n",
+    "\n",
+    "        headers.forEach(function(el, i) {\n",
+    "            var name = el.innerText;\n",
+    "            if (name.toLowerCase() !== \"contents\") {\n",
+    "                var anchor = el.id = \"header-\" + i;\n",
+    "                var link = document.createElement(\"a\");\n",
+    "                link.href = \"#\" + anchor;\n",
+    "\n",
+    "                if (el.tagName === \"H1\") {\n",
+    "                    sectionCounter++;\n",
+    "                    subSectionCounter = 0;\n",
+    "                    link.innerText = sectionCounter + \".0 \" + name;\n",
+    "                } else if (el.tagName === \"H2\" || el.tagName === \"H3\") {\n",
+    "                    subSectionCounter++;\n",
+    "                    link.innerText = sectionCounter + \".\" + subSectionCounter + \" \" + name;\n",
+    "                }\n",
+    "\n",
+    "                var listItem = document.createElement(\"li\");\n",
+    "                listItem.appendChild(link);\n",
+    "                toc.appendChild(listItem);\n",
+    "            }\n",
+    "        });\n",
+    "    });\n",
+    "</script>"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
