beginning of design

--- a/index.ipynb
+++ b/index.ipynb
@@ -7,22 +7,22 @@
     "# **<u>Contents</u>**\n",
     "<div id=\"toc\"></div>\n",
     "\n",
-    "# **<u>Analysis</u>** <a name=\"analysis\"></a>\n",
+    "# **<u>Analysis</u>**\n",
     "\n",
-    "### **<u>Overview</u>** <a name=\"overview-an\"></a>\n",
+    "### **<u>Overview</u>**\n",
     "\n",
     "- In a large family home or a small nursing home, managing the administration of medicines can be a complex task. With multiple individuals, each possibly requiring different medicines at different intervals, it becomes crucial to have a system in place that ensures safe and timely administration of doses. This is particularly important considering that each medicine has a required minimal interval between doses, a maximum dose per day, and age appropriateness.\n",
     "    - To address this challenge, we propose the creation of a medical logging database. This database will serve as a central repository of information about the individuals in the household or nursing home, the medicines they are taking, and a log of administered doses.\n",
     "    - The goal of this system is to provide a clear, user-friendly, and reliable way for adults in the household or nursing home staff to know when it is safe to administer the next dose of a particular medicine to a particular individual. This will help prevent overdoses or missed doses, ensuring the health and safety of all individuals involved. \n",
     "\n",
-    "### **<u>What Needs Researching</u>** <a name=\"what-needs-researching-an\"></a>\n",
+    "### **<u>What Needs Researching</u>**\n",
     "\n",
     "- **Demographics:** Numbers in households / nursing homes that require regular medicine. This helps gauge the scale of the problem as well as tailor it to the average.\n",
     "- **Medicine Usage:** Most commonly used medicines, frequency of use, and dangers of overuse. This guides us into creating a database that can accommodate all information in a scalable way.\n",
     "- **Reminder Systems:** What are the most effective ways to remind and display information? How can this be intuitive and easy to use?\n",
     "- **Data Storage:** What are the best practices for storing information? How much should we factor efficiency in over security and privacy?\n",
     "\n",
-    "### **<u>Current Solutions</u>** <a name=\"current-solutions-an\"></a>\n",
+    "### **<u>Current Solutions</u>**\n",
     "\n",
     "1. **Notebooks and Paper Records:** Traditionally, people have used notebooks or paper records to keep track of medicine schedules. This method is simple and doesn't require any technical knowledge. However, it can be prone to human error and can be difficult to manage if there are multiple medicines or people involved.\n",
     "2. **Memory:** Some people rely on their memory to remember when to take their medicine. This can work for individuals with a single medicine schedule, but it becomes increasingly difficult with more medicines or complex schedules. It's also unreliable due to the possibility of forgetting, especially for elderly individuals or those with memory-related health issues.\n",
@@ -31,7 +31,7 @@
     "5. **Pharmacy Services:** Some pharmacies offer medicine management services. They can pre-package medicines according to the schedule, which can make it easier to manage. However, this service is usually only available for medicines purchased from that pharmacy.\n",
     "6. **Specialised Organisations:** There are organisations that specialise in medicine management, particularly for elderly individuals or those with complex medicine schedules. These organisations can provide comprehensive services, but they can be expensive and may not be available in all areas.\n",
     "\n",
-    "### **<u>Questions to Consider</u>** <a name=\"questions-to-consider-an\"></a>\n",
+    "### **<u>Questions to Consider</u>**\n",
     "\n",
     "1. What operating systems do you use most frequently for managing tasks? (Windows, Mac, Android, iOS, etc.)\n",
     "2. Would you prefer a graphical or text-based interface for a medicine management system?\n",
@@ -44,7 +44,7 @@
     "9. How important is it for you to have access to detailed information about each medicine (e.g., side effects, interactions with other drugs)?\n",
     "10. How important is it for you to have a feature that allows you to export information in a user-friendly way?\n",
     "\n",
-    "### **<u>Objectives</u>** <a name=\"objectives-an\"></a>\n",
+    "### **<u>Objectives</u>**\n",
     "\n",
     "1. **Design and implement a database with at least three tables:**\n",
     "    - **People:** This table will store information about the individuals in the household or nursing home. The data stored will include their names and ages.\n",
@@ -62,7 +62,7 @@
     "6. **The system should be robust and reliable.**\n",
     "    - The system should ensure accurate tracking of medicine administration to prevent overdoses or missed doses. It should be able to handle multiple users and large amounts of data without crashing or slowing down.\n",
     "\n",
-    "### **<u>Limitations</u>** <a name=\"limitations-an\"></a>\n",
+    "### **<u>Limitations</u>**\n",
     "\n",
     "1. **Data Accuracy:** The system relies on accurate input of information about individuals, medicines, and administered doses. Any inaccuracies in this data could lead to incorrect reminders or unsafe administration of medicines.\n",
     "2. **User Compliance:** The system's effectiveness is dependent on the users consistently logging administered doses. If a dose is administered but not logged in the system, it could lead to unsafe administration of subsequent doses.\n",
@@ -73,8 +73,17 @@
     "7. **Emergency Situations:** The system is not designed to handle emergency situations where normal medicine administration schedules may need to be overridden.\n",
     "8. **Regulatory Compliance:** Depending on the jurisdiction, there may be legal and regulatory requirements related to the storage and handling of medical information that the system must comply with.\n",
     "\n",
-    "### **<u>haha</u>** <a name=\"haha-an\"></a>\n",
     "\n",
+    "# **<u>Document my Design</u>**\n",
+    "\n",
+    "### **Navigation**\n",
+    "<img src=\"imgs/design/Navbar.png\" alt=\"logs\" width=\"600\">\n",
+    "\n",
+    "### **Logs**\n",
+    "<img src=\"imgs/design/Logs.png\" alt=\"logs\" width=\"600\">\n",
+    "\n",
+    "### **User Settings**\n",
+    "<img src=\"imgs/design/User-Settings.png\" alt=\"logs\" width=\"600\">\n",
     "\n",
     "<script>\n",
     "    document.addEventListener(\"DOMContentLoaded\", function() {\n",
