--- a/index.ipynb
+++ b/index.ipynb
@@ -25,11 +25,22 @@
     "### **<u>Current Solutions</u>**\n",
     "\n",
     "1. **Notebooks and Paper Records:** Traditionally, people have used notebooks or paper records to keep track of medicine schedules. This method is simple and doesn't require any technical knowledge. However, it can be prone to human error and can be difficult to manage if there are multiple medicines or people involved.\n",
+    "\n",
+    "<img src=\"imgs/analysis/PenPaper.png\" alt=\"logs\" width=\"300\">\n",
+    "\n",
     "2. **Memory:** Some people rely on their memory to remember when to take their medicine. This can work for individuals with a single medicine schedule, but it becomes increasingly difficult with more medicines or complex schedules. It's also unreliable due to the possibility of forgetting, especially for elderly individuals or those with memory-related health issues.\n",
-    "3. **Mobile Apps:** There are several mobile apps available that help manage medicine schedules. These apps can send reminders, keep track of medicine intake, and sometimes even provide information about the medicines. However, the quality and features of these apps can vary greatly.\n",
+    "3. **Applications:** There are several mobile & desktop apps available that help manage medicine schedules. These apps can send reminders, keep track of medicine intake, and sometimes even provide information about the medicines. However, the quality and features of these apps can vary greatly.\n",
+    "\n",
+    "<img src=\"imgs/analysis/Applications.png\" alt=\"logs\" width=\"300\">\n",
+    "\n",
     "4. **Healthcare Providers:** Healthcare providers often give advice on how to manage medicine schedules. In some cases, they may provide tools or services to help manage this. However, this is often limited to their patients and may not be available to everyone.\n",
+    "\n",
+    "<img src=\"imgs/analysis/Healthcare.png\" alt=\"logs\" width=\"300\">\n",
+    "\n",
     "5. **Pharmacy Services:** Some pharmacies offer medicine management services. They can pre-package medicines according to the schedule, which can make it easier to manage. However, this service is usually only available for medicines purchased from that pharmacy.\n",
-    "6. **Specialised Organisations:** There are organisations that specialise in medicine management, particularly for elderly individuals or those with complex medicine schedules. These organisations can provide comprehensive services, but they can be expensive and may not be available in all areas.\n",
+    "\n",
+    "<img src=\"imgs/analysis/Prescription.png\" alt=\"logs\" width=\"300\">\n",
+    "\n",
     "\n",
     "### **<u>Questions to Consider</u>**\n",
     "\n",
