--- a/index.ipynb
+++ b/index.ipynb
@@ -45,15 +45,26 @@
     "### **<u>Questions to Consider</u>**\n",
     "\n",
     "1. What operating systems do you use most frequently for managing tasks? (Windows, Mac, Android, iOS, etc.)\n",
+    "  - Our third party primarily uses iOS and Windows for managing tasks.\n",
+    "  - As the third party primarily uses iOS and Windows, the medicine management system should be developed as a cross-platform application. This requires some technology that allows for development of applications that can run on multiple operating systems such as ElectronJS or React.\n",
     "2. Would you prefer a graphical or text-based interface for a medicine management system?\n",
+    "  - Our third party would prefer a graphical interface as it allows for more fluid data entry, the ability to visualise countdowns, and other such features for ease of access.\n",
+    "  -  Given the preference for a graphical interface, the system should be designed with a user-friendly and intuitive GUI. This could include visual elements like calendars for tracking dosage timings, charts for visualising medicine interactions, and easy-to-use forms for data entry.\n",
     "3. What types of reminders would you find most effective for taking your medicine? (Notifications, alarms, in-app only, etc.)\n",
+    "  - Our third party finds notifications and alarms to be the most effective. They also highlighted the need for reminders about the minimum time to wait between doses.\n",
+    "  - The system should implement a robust notification system that can send reminders on both iOS and Windows. This could involve push notifications for mobile devices and desktop notifications for Windows. Additionally, the system should be able to calculate the minimum time to wait between doses and set reminders accordingly.\n",
     "4. What specific information about your medicine would you want to store in a management system?\n",
-    "5. How would you prefer to label or annotate your medicine in a management system?\n",
-    "6. Rank the following features in order of importance for a virtual medicine tool: Reminders, Information Storage, User-Friendly Interface, Security.\n",
-    "7. Would you want to share your medicine information with others? If so, who would you want to share it with and what specific information would you want to share?\n",
-    "8. What method would you prefer to use to share your medicine information? (Email, In-app sharing, etc.)\n",
-    "9. How important is it for you to have access to detailed information about each medicine (e.g., side effects, interactions with other drugs)?\n",
-    "10. How important is it for you to have a feature that allows you to export information in a user-friendly way?\n",
+    "  - Our third party would like the system to store information about dosage timings and interactions between different medicines.\n",
+    "  - The system should have a well-structured database to store information about dosage timings and medicine interactions. This could involve tables for medicines, users, and dosage logs, with appropriate relations to track interactions and timings.\n",
+    "5. Rank the following features in order of importance for a virtual medicine tool: Reminders, Information Storage, User-Friendly Interface, Security.\n",
+    "  - Our third party ranked the features in the following order of importance: User-Friendly Interface, Information Storage, Reminders, Security.\n",
+    "  - Given the ranking of features, the system should prioritise developing a user-friendly interface, followed by robust information storage, effective reminders, and finally, security measures. Each feature should be developed with the user's needs in mind to ensure the system is as useful and usable as possible.\n",
+    "6. Would you want to share your medicine information with others? If so, what specific information would you want to share and how?\n",
+    "  - Our third party mentioned that it might be useful to export medicine timings to share with a doctor via an output file.\n",
+    "  - The system should include a feature to export medicine timings. This could be implemented as a downloadable file in a universally readable format like CSV or PDF, which can be easily shared with a doctor.\n",
+    "7. How important is it for you to have access to detailed information about each medicine (e.g., side effects, interactions with other drugs)?\n",
+    "  - Our third party suggests that though detailed information about each medicine could be useful, the most important feature is the management of medicine timings and interactions.\n",
+    "  - While detailed information about each medicine could be useful, the primary focus should be on managing medicine timings and interactions. This could involve a feature to add and track medicines and their timings, and a system to warn users about potential interactions when a new medicine is added.\n",
     "\n",
     "### **<u>Objectives</u>**\n",
     "\n",
@@ -79,7 +90,7 @@
     "2. **User Compliance:** The system's effectiveness is dependent on the users consistently logging administered doses. If a dose is administered but not logged in the system, it could lead to unsafe administration of subsequent doses.\n",
     "3. **Technical Knowledge:** While the system is designed to be user-friendly, some level of technical knowledge is required to use it. This could be a barrier for some users, particularly in a household setting.\n",
     "4. **Access to Technology:** The system requires access to a device with internet connectivity. This could be a limitation in settings where such access is limited or unreliable.\n",
-    "5. **Privacy and Security:** Storing sensitive medical information raises concerns about privacy and data security. While the system will implement security measures, there is always a risk of data breaches or unauthorized access.\n",
+    "5. **Privacy and Security:** Storing sensitive medical information raises concerns about privacy and data security. While the system will implement security measures, there is always a risk of data breaches or unauthorised access.\n",
     "6. **Medicine Complexity:** The system is designed to handle common scenarios of medicine administration, but there may be complexities or unique situations it cannot accommodate. For example, interactions between different medicines, or changes in a person's medicine regimen.\n",
     "7. **Emergency Situations:** The system is not designed to handle emergency situations where normal medicine administration schedules may need to be overridden.\n",
     "8. **Regulatory Compliance:** Depending on the jurisdiction, there may be legal and regulatory requirements related to the storage and handling of medical information that the system must comply with.\n",
