--- a/index.ipynb
+++ b/index.ipynb
@@ -44,25 +44,25 @@
     "\n",
     "### **<u>Questions to Consider</u>**\n",
     "\n",
-    "1. What operating systems do you use most frequently for managing tasks? (Windows, Mac, Android, iOS, etc.)\n",
+    "1. **What operating systems do you use most frequently for managing tasks? (Windows, Mac, Android, iOS, etc.)**\n",
     "  - Our third party primarily uses iOS and Windows for managing tasks.\n",
     "  - As the third party primarily uses iOS and Windows, the medicine management system should be developed as a cross-platform application. This requires some technology that allows for development of applications that can run on multiple operating systems such as ElectronJS or React.\n",
-    "2. Would you prefer a graphical or text-based interface for a medicine management system?\n",
+    "2. **Would you prefer a graphical or text-based interface for a medicine management system?**\n",
     "  - Our third party would prefer a graphical interface as it allows for more fluid data entry, the ability to visualise countdowns, and other such features for ease of access.\n",
     "  -  Given the preference for a graphical interface, the system should be designed with a user-friendly and intuitive GUI. This could include visual elements like calendars for tracking dosage timings, charts for visualising medicine interactions, and easy-to-use forms for data entry.\n",
-    "3. What types of reminders would you find most effective for taking your medicine? (Notifications, alarms, in-app only, etc.)\n",
+    "3. **What types of reminders would you find most effective for taking your medicine? (Notifications, alarms, in-app only, etc.)**\n",
     "  - Our third party finds notifications and alarms to be the most effective. They also highlighted the need for reminders about the minimum time to wait between doses.\n",
     "  - The system should implement a robust notification system that can send reminders on both iOS and Windows. This could involve push notifications for mobile devices and desktop notifications for Windows. Additionally, the system should be able to calculate the minimum time to wait between doses and set reminders accordingly.\n",
-    "4. What specific information about your medicine would you want to store in a management system?\n",
+    "4. **What specific information about your medicine would you want to store in a management system?**\n",
     "  - Our third party would like the system to store information about dosage timings and interactions between different medicines.\n",
     "  - The system should have a well-structured database to store information about dosage timings and medicine interactions. This could involve tables for medicines, users, and dosage logs, with appropriate relations to track interactions and timings.\n",
-    "5. Rank the following features in order of importance for a virtual medicine tool: Reminders, Information Storage, User-Friendly Interface, Security.\n",
+    "5. **Rank the following features in order of importance for a virtual medicine tool: Reminders, Information Storage, User-Friendly Interface, Security.**\n",
     "  - Our third party ranked the features in the following order of importance: User-Friendly Interface, Information Storage, Reminders, Security.\n",
     "  - Given the ranking of features, the system should prioritise developing a user-friendly interface, followed by robust information storage, effective reminders, and finally, security measures. Each feature should be developed with the user's needs in mind to ensure the system is as useful and usable as possible.\n",
-    "6. Would you want to share your medicine information with others? If so, what specific information would you want to share and how?\n",
+    "6. **Would you want to share your medicine information with others? If so, what specific information would you want to share and how?**\n",
     "  - Our third party mentioned that it might be useful to export medicine timings to share with a doctor via an output file.\n",
     "  - The system should include a feature to export medicine timings. This could be implemented as a downloadable file in a universally readable format like CSV or PDF, which can be easily shared with a doctor.\n",
-    "7. How important is it for you to have access to detailed information about each medicine (e.g., side effects, interactions with other drugs)?\n",
+    "7. **How important is it for you to have access to detailed information about each medicine (e.g., side effects, interactions with other drugs)?**\n",
     "  - Our third party suggests that though detailed information about each medicine could be useful, the most important feature is the management of medicine timings and interactions.\n",
     "  - While detailed information about each medicine could be useful, the primary focus should be on managing medicine timings and interactions. This could involve a feature to add and track medicines and their timings, and a system to warn users about potential interactions when a new medicine is added.\n",
     "\n",
