--- a/index.ipynb
+++ b/index.ipynb
@@ -72,17 +72,31 @@
     "    - **People:** This table will store information about the individuals in the household or nursing home. The data stored will include their names and ages.\n",
     "    - **Medicines:** This table will store information about the different medicines. The data stored will include the name of the medicine, the required minimal interval between doses, the maximum dose per day, and the age appropriateness.\n",
     "    - **Log:** This table will keep track of which medicines have been administered, to whom, and when. The data stored will include the name of the individual, the name of the medicine, and the time and date of administration.\n",
+    "    - **Implementation:** The database can be implemented using SQL, such as SQLite or PostgreSQL. The tables can be created using SQL statements, and the data can be queried and manipulated using SQL queries.\n",
+    "\n",
     "2. **Develop a system that can use the information in these tables to determine when it is safe to administer the next dose of a particular medicine to a particular individual.**\n",
-    "    - The system will need to calculate the time since the last dose was administered and compare it to the minimal interval between doses.\n",
-    "    - The system will also need to keep track of the total amount of medicine administered in a day and compare it to the maximum dose per day.\n",
+    "    - **Language and Framework:** The system can be developed using a programming language like Python, and a web framework like Django or Flask. These frameworks provide tools for handling database operations and building web applications.\n",
+    "    - **Mapping the Database:** The database tables can be mapped to Python classes using an Object-Relational Mapping (ORM) tool like SQLAlchemy. This allows for easy interaction with the database using Python code.\n",
+    "    - **Calculating Safe Dose Time:** The system can calculate the time since the last dose was administered by comparing the current time with the time of the last administration recorded in the Log table. It can then compare this time difference with the minimal interval between doses to determine if it is safe to administer the next dose.\n",
+    "\n",
     "3. **Ensure the system is user-friendly and accessible to the adults in the household or nursing home staff.**\n",
-    "    - The system should have a simple and intuitive interface for logging medicine administration and checking when the next dose can be safely given.\n",
+    "    - **Graphical User Interface (GUI):** The system can have a user-friendly GUI built using web technologies like HTML, CSS, and JavaScript. This allows for easy navigation and interaction with the system.\n",
+    "    - **Responsive Design:** The GUI can be designed to be responsive, adapting to different screen sizes and devices, making it accessible to users on desktops, laptops, tablets, and smartphones.\n",
+    "    - **Intuitive Interface:** The GUI can have intuitive forms and controls for logging medicine administration and checking when the next dose can be safely given. This can include features like calendars for selecting dates and times, dropdown menus for selecting individuals and medicines, and clear instructions for data entry.\n",
+    "\n",
     "4. **Implement a reminder system to alert the responsible adult when it's time to administer the next dose.**\n",
-    "    - The system should send notifications or alarms to remind the responsible adult when it's time to administer the next dose.\n",
+    "    - **Notification Services:** The system can integrate with notification services like Apple Push Notification Service (APNS) for iOS devices and Firebase Cloud Messaging (FCM) for Android devices. This allows the system to send push notifications to the responsible adult's device when it's time to administer the next dose.\n",
+    "    - **Scheduled Tasks:** The system can use scheduled tasks or cron jobs to periodically check the database for upcoming doses and send notifications accordingly. This ensures that reminders are sent at the appropriate times.\n",
+    "\n",
     "5. **Ensure the system is secure and respects the privacy of the individuals.**\n",
-    "    - Only authorised users should have access to the medical data. The system should implement security measures to prevent unauthorised access.\n",
+    "    - **Authentication and Authorization:** The system can implement user authentication and authorization mechanisms to ensure that only authorized users have access to the medical data. This can be achieved using frameworks like Django's built-in authentication system or implementing OAuth for third-party authentication.\n",
+    "    - **Data Encryption:** The system can encrypt sensitive data like personal information and medical records to protect them from unauthorized access. This can be done using encryption algorithms and secure storage mechanisms.\n",
+    "    - **Secure Communication:** The system can use secure communication protocols like HTTPS to encrypt data transmitted between the client and the server, ensuring that sensitive information is protected during transit.\n",
+    "\n",
     "6. **The system should be robust and reliable.**\n",
-    "    - The system should ensure accurate tracking of medicine administration to prevent overdoses or missed doses. It should be able to handle multiple users and large amounts of data without crashing or slowing down.\n",
+    "    - **Error Handling:** The system can implement proper error handling mechanisms to handle exceptions and errors gracefully. This includes validating user input, handling database errors, and providing informative error messages to users.\n",
+    "    - **Testing and Quality Assurance:** The system can be thoroughly tested using automated testing frameworks like pytest or unittest. This ensures that the system functions as expected and helps identify and fix any bugs or issues.\n",
+    "    - **Scalability and Performance:** The system can be designed to handle a large number of users and a large amount of data without slowing down or crashing. This can be achieved by optimizing database queries, using caching mechanisms, and employing scalable infrastructure.\n",
     "\n",
     "### **<u>Limitations</u>**\n",
     "\n",
