Adjusting grammarly's US spelling back to UK english

--- a/index.ipynb
+++ b/index.ipynb
@@ -89,14 +89,14 @@
     "    - **Scheduled Tasks:** The system can use scheduled tasks or cron jobs to periodically check the database for upcoming doses and send notifications accordingly. This ensures that reminders are sent at the appropriate times.\n",
     "\n",
     "5. **Ensure the system is secure and respects the privacy of the individuals.**\n",
-    "    - **Authentication and Authorization:** The system can implement user authentication and authorization mechanisms to ensure that only authorized users have access to the medical data. This can be achieved using frameworks like Django's built-in authentication system or implementing OAuth for third-party authentication.\n",
-    "    - **Data Encryption:** The system can encrypt sensitive data like personal information and medical records to protect them from unauthorized access. This can be done using encryption algorithms and secure storage mechanisms.\n",
+    "    - **Authentication and Authorisation:** The system can implement user authentication and authorisation mechanisms to ensure that only authorised users have access to the medical data. This can be achieved using frameworks like Django's built-in authentication system or implementing OAuth for third-party authentication.\n",
+    "    - **Data Encryption:** The system can encrypt sensitive data like personal information and medical records to protect them from unauthorised access. This can be done using encryption algorithms and secure storage mechanisms.\n",
     "    - **Secure Communication:** The system can use secure communication protocols like HTTPS to encrypt data transmitted between the client and the server, ensuring that sensitive information is protected during transit.\n",
     "\n",
     "6. **The system should be robust and reliable.**\n",
     "    - **Error Handling:** The system can implement proper error handling mechanisms to handle exceptions and errors gracefully. This includes validating user input, handling database errors, and providing informative error messages to users.\n",
     "    - **Testing and Quality Assurance:** The system can be thoroughly tested using automated testing frameworks like pytest or unittest. This ensures that the system functions as expected and helps identify and fix any bugs or issues.\n",
-    "    - **Scalability and Performance:** The system can be designed to handle a large number of users and a large amount of data without slowing down or crashing. This can be achieved by optimizing database queries, using caching mechanisms, and employing scalable infrastructure.\n",
+    "    - **Scalability and Performance:** The system can be designed to handle a large number of users and a large amount of data without slowing down or crashing. This can be achieved by optimising database queries, using caching mechanisms, and employing scalable infrastructure.\n",
     "\n",
     "### **<u>Limitations</u>**\n",
     "\n",
