Expanded limitations section

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,14 +100,31 @@
     "\n",
     "### **<u>Limitations</u>**\n",
     "\n",
-    "1. **Data Accuracy:** The system relies on accurate input of information about individuals, medicines, and administered doses. Any inaccuracies in this data could lead to incorrect reminders or unsafe administration of medicines.\n",
-    "2. **User Compliance:** The system's effectiveness is dependent on the users consistently logging administered doses. If a dose is administered but not logged in the system, it could lead to unsafe administration of subsequent doses.\n",
-    "3. **Technical Knowledge:** While the system is designed to be user-friendly, some level of technical knowledge is required to use it. This could be a barrier for some users, particularly in a household setting.\n",
-    "4. **Access to Technology:** The system requires access to a device with internet connectivity. This could be a limitation in settings where such access is limited or unreliable.\n",
-    "5. **Privacy and Security:** Storing sensitive medical information raises concerns about privacy and data security. While the system will implement security measures, there is always a risk of data breaches or unauthorised access.\n",
-    "6. **Medicine Complexity:** The system is designed to handle common scenarios of medicine administration, but there may be complexities or unique situations it cannot accommodate. For example, interactions between different medicines, or changes in a person's medicine regimen.\n",
-    "7. **Emergency Situations:** The system is not designed to handle emergency situations where normal medicine administration schedules may need to be overridden.\n",
-    "8. **Regulatory Compliance:** Depending on the jurisdiction, there may be legal and regulatory requirements related to the storage and handling of medical information that the system must comply with.\n",
+    "1. **Data Accuracy:**\n",
+    "    - **Individual Information:** Accurate input of individual's information is crucial for the system to function correctly. Any inaccuracies could lead to incorrect reminders.\n",
+    "    - **Medicine Information:** The system relies on accurate data about medicines and their dosages. Incorrect information could lead to unsafe administration of medicines.\n",
+    "\n",
+    "2. **User Compliance:**\n",
+    "    - **Logging Doses:** The system's effectiveness is dependent on users consistently logging administered doses. If a dose is administered but not logged, it could lead to unsafe administration of subsequent doses.\n",
+    "\n",
+    "3. **Technical Knowledge:**\n",
+    "    - **User-Friendliness:** The system is designed to be user-friendly, but some level of technical knowledge is required. This could be a barrier for some users, particularly in a household setting.\n",
+    "\n",
+    "4. **Access to Technology:**\n",
+    "    - **Internet Connectivity:** The system requires a device with internet connectivity. Limited or unreliable access could be a limitation in certain settings.\n",
+    "\n",
+    "5. **Privacy and Security:**\n",
+    "    - **Data Storage:** Storing sensitive medical information raises concerns about privacy and data security. Despite implementing security measures, there is always a risk of data breaches or unauthorised access.\n",
+    "\n",
+    "6. **Medicine Complexity:**\n",
+    "    - **Medicine Interactions:** The system is designed to handle common scenarios of medicine administration, but may not accommodate complexities like interactions between different medicines.\n",
+    "    - **Regimen Changes:** Changes in a person's medicine regimen may not be adequately handled by the system.\n",
+    "\n",
+    "7. **Emergency Situations:**\n",
+    "    - **Overriding Schedules:** The system is not designed to handle emergency situations where normal medicine administration schedules may need to be overridden.\n",
+    "\n",
+    "8. **Regulatory Compliance:**\n",
+    "    - **Legal Requirements:** Depending on the jurisdiction, there may be legal and regulatory requirements related to the storage and handling of medical information that the system must comply with.\n",
     "\n",
     "\n",
     "# **<u>Document my Design</u>**\n",
