Added img to analysis

--- a/index.ipynb
+++ b/index.ipynb
@@ -29,6 +29,9 @@
     "<img src=\"imgs/analysis/PenPaper.png\" alt=\"logs\" width=\"300\">\n",
     "\n",
     "2. **Memory:** Some people rely on their memory to remember when to take their medicine. This can work for individuals with a single medicine schedule, but it becomes increasingly difficult with more medicines or complex schedules. It's also unreliable due to the possibility of forgetting, especially for elderly individuals or those with memory-related health issues.\n",
+    "\n",
+    "<img src=\"imgs/analysis/Thinking.png\" alt=\"logs\" width=\"300\">\n",
+    "\n",
     "3. **Applications:** There are several mobile & desktop apps available that help manage medicine schedules. These apps can send reminders, keep track of medicine intake, and sometimes even provide information about the medicines. However, the quality and features of these apps can vary greatly.\n",
     "\n",
     "<img src=\"imgs/analysis/Applications.png\" alt=\"logs\" width=\"300\">\n",
@@ -127,7 +130,7 @@
     "    - **Legal Requirements:** Depending on the jurisdiction, there may be legal and regulatory requirements related to the storage and handling of medical information that the system must comply with.\n",
     "\n",
     "\n",
-    "# **<u>Document my Design</u>**\n",
+    "# **<u>Documented Design</u>**\n",
     "\n",
     "### **Navigation**\n",
     "<img src=\"imgs/design/Navbar.png\" alt=\"logs\" width=\"600\">\n",
